--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WFH/WFO Slot Calculator v1.4</title>
+  <title>WFH Slot Calculator</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -47,13 +47,11 @@
       border-bottom: 1px solid #e1e7ee;
       text-align: center;
     }
-    /* Header color sections */
     th.section-wfo     { background: #E2E6FA; color: #25356B; }
     th.section-slot1   { background: #D0F0D6; color: #195B3E; }
     th.section-slot2   { background: #FFEAC9; color: #A76107; }
     th.section-total   { background: #FFE0E0; color: #9A2535;}
     th.section-delete  { background: #fafafa;}
-    /* Column dividers */
     td, th { border-right: 1.5px solid #fff; }
     td.section-div, th.section-div {
       border-right: 2.5px solid #a3adc7 !important;
@@ -62,7 +60,6 @@
       width: 3px;
     }
     tr:last-child td { border-bottom: none;}
-    /* Narrow input width */
     input[type="text"] {
       width: 78px;
       padding: 6px 5px;
@@ -111,14 +108,14 @@
 </head>
 <body>
   <div class="container">
-    <h2>Work From Home Slot Calculator v1.4</h2>
+    <h2>Work From Home Slot Calculator v1.5</h2>
     <div class="desc">
       Paste your <b>WFO data (Date, WFO In, WFO Out)</b> from Excel or Sheets.<br>
       The table will <b>auto-calculate WFH slots</b> as per rules:<br>
       <ul>
         <li>Work starts at <b>08:00</b></li>
-        <li>Min. total working hours: <b>9:16</b> (including WFO &amp; WFH)</li>
-        <li>Commute: <b>30 min</b> before and after office</li>
+        <li>Total working hours in a day: <b>9:16</b> (including WFO &amp; WFH)</li>
+        <li>Commute: <b>30 min</b> to and from office</li>
         <li>All times in 24hr format <b>(hh:mm)</b></li>
         <li>Time entry: Enter 3 or 4 digits (e.g. <b>945</b> or <b>1045</b>), auto-formats to <b>09:45</b> or <b>10:45</b> on leaving the field.</li>
       </ul>
@@ -229,23 +226,23 @@ function calcForRow(row) {
 }
 let rows = [];
 function timeInputFilter(e) {
-  // Allow only numbers (do not enforce length now)
+  // Allow only numbers (do not enforce length)
   let val = e.target.value.replace(/[^0-9]/g,'');
   e.target.value = val;
 }
 function timeInputBlur(e, idx, field) {
   // On blur, format to hh:mm if 3-4 numbers; zero-pad if 3
   let val = e.target.value.replace(/[^0-9]/g,'');
-  if (val.length===3)  val = '0'+val;
-  if (val.length===4) {
-    let h=val.slice(0,2), m=val.slice(2);
+  let formatted = '';
+  if (val.length === 3) val = '0' + val;
+  if (val.length === 4) {
+    let h = val.slice(0,2), m = val.slice(2);
     if (Number(h)<=23 && Number(m)<=59)
-      updateCell(idx, field, h+':'+m);
-    else
-      updateCell(idx, field, '');
-  } else {
-    updateCell(idx, field, '');
+      formatted = h + ':' + m;
   }
+  // Show formatted value in input & store in data (or blank if invalid)
+  e.target.value = formatted;
+  updateCell(idx, field, formatted);
 }
 function renderTable() {
   let tb = document.getElementById("table-body");
@@ -253,25 +250,24 @@ function renderTable() {
   rows.forEach((row, idx) => {
     let c = calcForRow(row);
     tb.innerHTML += `<tr>
-      <td><input type="text" value="${row.date}" onchange="updateCell(${idx},'date',this.value)" style="width:102px"></td>
+      <td><input type="text" value="${row.date}"
+        onchange="updateCell(${idx},'date',this.value)" style="width:102px"></td>
     <td>
       <input type="text"
-        value="${row.wfoIn.replace(/[^0-9]/g,'')}"
+        value="${row.wfoIn}"
         inputmode="numeric"
         pattern="\\d{3,4}"
         oninput="timeInputFilter(event)"
         onblur="timeInputBlur(event,${idx},'wfoIn')"
-        onchange="updateCell(${idx},'wfoIn',this.value)"
         placeholder="hhmm">
     </td>
     <td>
       <input type="text"
-        value="${row.wfoOut.replace(/[^0-9]/g,'')}"
+        value="${row.wfoOut}"
         inputmode="numeric"
         pattern="\\d{3,4}"
         oninput="timeInputFilter(event)"
         onblur="timeInputBlur(event,${idx},'wfoOut')"
-        onchange="updateCell(${idx},'wfoOut',this.value)"
         placeholder="hhmm">
     </td>
     <td class="section-div"></td>
@@ -305,7 +301,17 @@ async function pasteFromClipboard(){
       let [date, wfoIn, wfoOut] = cells;
       wfoIn  = wfoIn.replace(/[^0-9]/g,'');
       wfoOut = wfoOut.replace(/[^0-9]/g,'');
-      newRows.push({date, wfoIn, wfoOut});
+      // format imported times
+      let formatTime = v => {
+        if (v.length === 3) v = '0'+v;
+        if (v.length === 4) {
+          let h = v.slice(0,2), m = v.slice(2);
+          if (Number(h)<=23 && Number(m)<=59)
+            return h + ':' + m;
+        }
+        return '';
+      };
+      newRows.push({date, wfoIn:formatTime(wfoIn), wfoOut:formatTime(wfoOut)});
     }
   }
   if (newRows.length) {
