--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Work From Home Slot Calculator v1.7</h2>
+    <h2>Work From Home Slot Calculator</h2>
     <div class="desc">
       Paste your <b>WFO data (Date, WFO In, WFO Out)</b> from Excel or Sheets.<br>
       The table will <b>auto-calculate WFH slots</b> as per rules:<br>
